# mailnagtray

./: .gitignore  .lite_project.lua  README.md  meson.build
data/: mailnagtray-startup.desktop  mailnagtray.desktop
src/: emailsdialog.cpp  emailsdialog.h  emailswindow.cpp  emailswindow.h  listwidget.cpp  listwidget.h  mailnagdbus.cpp  mailnagdbus.h  main.cpp  tray.cpp  tray.h  util.cpp  util.h
